--- a/index.html
+++ b/index.html
@@ -2968,7 +2968,7 @@
     <!-- Old modals removed - now using React modals -->
 
     <script src="db-wrapper.js"></script>
-    <script src="instantdb-auth.js"></script>
+    <script src="auth/instantdb-auth.js"></script>
     <script src="genchem_tests.js"></script>
     <!-- Load exam data files -->
     <script src="Biology/exam-data.js"></script>
